Update Ingress host in k3s/manifest.yaml for KrakenD deployment

--- a/k3s/manifest.yaml
+++ b/k3s/manifest.yaml
@@ -84,7 +84,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
   rules:
-    - host: krakend.internal.mx-central-1.sparkfly.cloud
+    - host: gateway.athlefi.internal.mx-central-1.sparkfly.cloud
       http:
         paths:
           - path: /
