Add Kubernetes resources for KrakenD deployment
- Created deployment.yaml for KrakenD deployment configuration.
- Added ingress.yaml for traffic routing to the KrakenD service.
- Introduced service.yaml to expose KrakenD on port 80.
- Defined athlefi-dev namespace in namespace.yaml.
- Updated kustomization.yaml to include new resources and a ConfigMap for KrakenD configuration.

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -9,5 +9,5 @@ resources:
 configMapGenerator:
   - name: krakend-config
     files:
-      - ../config/krakend.json
+      - ./config/krakend.json
     behavior: replace
