Add ConfigMap generation for KrakenD configuration in kustomization.yaml

--- a/k3s/kustomization.yaml
+++ b/k3s/kustomization.yaml
@@ -5,3 +5,9 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+
+configMapGenerator:
+  - name: krakend-config
+    files:
+      - ./config/krakend.json
+    behavior: replace
