Update ConfigMap generation in kustomization.yaml to use relative path for krakend.json

--- a/k3s/kustomization.yaml
+++ b/k3s/kustomization.yaml
@@ -9,5 +9,4 @@ resources:
 configMapGenerator:
   - name: krakend-config
     files:
-      - ./config/krakend.json
-    behavior: replace
+      - config/krakend.json
