Update kustomization.yaml to reference new krakend.json configuration file and add krakend.json for API gateway settings and endpoints.

--- a/apps/krakend-gateway/overlays/dev/kustomization.yaml
+++ b/apps/krakend-gateway/overlays/dev/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
 configMapGenerator:
   - name: krakend-config
     files:
-      - ../../base/config/krakend.json
+      - config/krakend.json
