Reorder resources in kustomization.yaml for athlete API and database
- Updated the order of resources in kustomization.yaml to improve clarity and organization.
- Ensured that db-pvc.yaml is now included before database deployment and service resources.

--- a/apps/athlete-api/base/kustomization.yaml
+++ b/apps/athlete-api/base/kustomization.yaml
@@ -1,7 +1,8 @@
 resources:
-  - deployment.yaml
-  - service.yaml
-  - db-deployment.yaml
-  - db-service.yaml
   - configmap.yaml
   - secret.yaml
+  - db-pvc.yaml
+  - db-deployment.yaml
+  - db-service.yaml
+  - deployment.yaml
+  - service.yaml
