Refactor database storage configuration in athlete API deployment
- Renamed persistent volume and claim from 'postgres' to 'db' for consistency.
- Updated volume mounts in db-deployment.yaml to reflect the new naming convention.
- Ensured that db-pvc.yaml is aligned with the updated claim name.

--- a/apps/athlete-api/base/db-deployment.yaml
+++ b/apps/athlete-api/base/db-deployment.yaml
@@ -32,9 +32,9 @@ spec:
             - name: POSTGRES_DB
               value: athlete_db
           volumeMounts:
-            - name: postgres-storage
+            - name: db-storage
               mountPath: /var/lib/postgresql/data
       volumes:
-        - name: postgres-storage
+        - name: db-storage
           persistentVolumeClaim:
-            claimName: postgres-pvc
+            claimName: db-pvc
