--- a/apps/athlete-api/base/db-deployment.yaml
+++ b/apps/athlete-api/base/db-deployment.yaml
@@ -31,6 +31,8 @@ spec:
               value: postgres
             - name: POSTGRES_DB
               value: athlete_db
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
           volumeMounts:
             - name: db-storage
               mountPath: /var/lib/postgresql/data
