--- a/apps/athlete-api/base/db-deployment.yaml
+++ b/apps/athlete-api/base/db-deployment.yaml
@@ -39,4 +39,4 @@ spec:
       volumes:
         - name: db-storage
           persistentVolumeClaim:
-            claimName: db-pvc
+            claimName: athlete-db-pvc
