--- a/apps/athlete-api/base/db-pvc.yaml
+++ b/apps/athlete-api/base/db-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: db-pvc
+  name: athlete-db-pvc
 spec:
   accessModes:
     - ReadWriteOnce
