Refactor environment variable configuration in athlete API deployment
- Updated environment variables in db-deployment.yaml and deployment.yaml to use config maps for DB_HOST, DB_PORT, DB_NAME, and DB_USER.
- Retained the use of secrets for DB_PASSWORD to enhance security and configuration management.

--- a/apps/athlete-api/base/db-deployment.yaml
+++ b/apps/athlete-api/base/db-deployment.yaml
@@ -27,9 +27,9 @@ spec:
           env:
             - name: POSTGRES_USER
               valueFrom:
-                secretKeyRef:
-                  name: athlete-secret
-                  key: DB_PASSWORD
+                configMapKeyRef:
+                  name: athlete-config
+                  key: DB_USER
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
