Refactor athlete API configuration by renaming database resources for consistency
- Updated DB_HOST in ConfigMap, persistent volume claim, and database service name to 'athlete-db'.
- Renamed athlete API service to 'athlete-api' for improved clarity and alignment with naming conventions.

--- a/apps/athlete-api/base/db-deployment.yaml
+++ b/apps/athlete-api/base/db-deployment.yaml
@@ -48,4 +48,4 @@ spec:
       volumes:
         - name: db-storage
           persistentVolumeClaim:
-            claimName: athlete-db-pvc
+            claimName: athlete-db
