--- a/apps/athlete-api/base/service.yaml
+++ b/apps/athlete-api/base/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: athlete-api-service
+  name: athlete-api
 spec:
   selector:
     app: athlete-api
