Add imagePullPolicy to athlete API deployment configuration
- Set imagePullPolicy to 'Always' in deployment.yaml to ensure the latest image is always pulled from the registry during deployment.

--- a/apps/athlete-api/base/deployment.yaml
+++ b/apps/athlete-api/base/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       imagePullSecrets:
         - name: regcred
+      imagePullPolicy: Always
       containers:
         - name: athlete-api
           image: registry.sparkfly.cloud/athlefi/athlete-api:latest
