Update athlete API image version in deployment configuration
- Changed the image tag for the athlete API from 'latest' to 'v11' in deployment.yaml to ensure a specific version is used for deployments.

--- a/apps/athlete-api/base/deployment.yaml
+++ b/apps/athlete-api/base/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       imagePullPolicy: Always
       containers:
         - name: athlete-api
-          image: registry.sparkfly.cloud/athlefi/athlete-api:latest
+          image: registry.sparkfly.cloud/athlefi/athlete-api:v11
           ports:
             - containerPort: 8000
           resources:
