Add PostgreSQL configuration and initialization for athlete API
- Introduced a ConfigMap for PostgreSQL configuration, including settings for postgresql.conf and pg_hba.conf.
- Added a new init job to ensure the database is ready before the application starts.
- Updated db-deployment.yaml to mount the PostgreSQL configuration and added readiness and liveness probes.
- Enhanced deployment.yaml with readiness and liveness probes for the athlete API.
- Included a new network policy to manage traffic between athlete API and athlete DB.
- Updated kustomization.yaml to include new resources for PostgreSQL configuration and init job.

--- a/apps/athlete-api/base/db-deployment.yaml
+++ b/apps/athlete-api/base/db-deployment.yaml
@@ -45,7 +45,46 @@ spec:
           volumeMounts:
             - name: db-storage
               mountPath: /var/lib/postgresql/data
+            - name: postgres-config
+              mountPath: /etc/postgresql/postgresql.conf
+              subPath: postgresql.conf
+            - name: postgres-config
+              mountPath: /etc/postgresql/pg_hba.conf
+              subPath: pg_hba.conf
+          command:
+            - postgres
+            - -c
+            - config_file=/etc/postgresql/postgresql.conf
+            - -c
+            - hba_file=/etc/postgresql/pg_hba.conf
+          readinessProbe:
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - postgres
+                - -d
+                - athlete_db
+            initialDelaySeconds: 15
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
+          livenessProbe:
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - postgres
+                - -d
+                - athlete_db
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 3
+            failureThreshold: 3
       volumes:
         - name: db-storage
           persistentVolumeClaim:
             claimName: athlete-db
+        - name: postgres-config
+          configMap:
+            name: postgres-config
