--- a/apps/athlete-api/base/kustomization.yaml
+++ b/apps/athlete-api/base/kustomization.yaml
@@ -1,8 +1,11 @@
 resources:
   - configmap.yaml
   - secret.yaml
+  - postgres-config.yaml
   - db-pvc.yaml
   - db-deployment.yaml
   - db-service.yaml
+  - init-db-job.yaml
   - deployment.yaml
   - service.yaml
+  - network-policy.yaml
