Add initial configuration for athlete service
- Introduced ConfigMaps for athlete configuration and PostgreSQL settings.
- Added StatefulSet and Service for PostgreSQL database management.
- Created Deployment for athlete API with environment variables sourced from ConfigMaps and Secrets.
- Updated kustomization.yaml to include new resources for the athlete service.
- Adjusted ArgoCD application path to reflect the new service structure.

--- a/environments/dev/apps.yaml
+++ b/environments/dev/apps.yaml
@@ -22,14 +22,14 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: athlete-api-dev
+  name: athlete-service-dev
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/dedsec-group/athlefi-infra-gitops
     targetRevision: HEAD
-    path: apps/athlete-api/overlays/dev
+    path: apps/athlete-service/overlays/dev
   destination:
     server: https://kubernetes.default.svc
     namespace: athlefi-dev
