--- a/apps/athlete-service/base/athlete-api-deployment.yaml
+++ b/apps/athlete-service/base/athlete-api-deployment.yaml
@@ -2,15 +2,28 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: athlete-api
+  labels:
+    app.kubernetes.io/name: athlete-api
+    app.kubernetes.io/instance: athlete-service
+    app.kubernetes.io/version: v11
+    app.kubernetes.io/component: api
+    app.kubernetes.io/part-of: athlefi
+    app.kubernetes.io/managed-by: kustomize
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: athlete-api
+      app.kubernetes.io/name: athlete-api
+      app.kubernetes.io/instance: athlete-service
   template:
     metadata:
       labels:
-        app: athlete-api
+        app.kubernetes.io/name: athlete-api
+        app.kubernetes.io/instance: athlete-service
+        app.kubernetes.io/version: v11
+        app.kubernetes.io/component: api
+        app.kubernetes.io/part-of: athlefi
+        app.kubernetes.io/managed-by: kustomize
     spec:
       imagePullSecrets:
         - name: regcred
@@ -20,6 +33,8 @@ spec:
           image: registry.sparkfly.cloud/athlefi/athlete-api:v11
           ports:
             - containerPort: 8000
+              name: http
+              protocol: TCP
           resources:
             requests:
               memory: "64Mi"
@@ -31,27 +46,27 @@ spec:
             - name: DB_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: athlete-config
+                  name: athlete-db-config
                   key: DB_HOST
             - name: DB_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: athlete-config
+                  name: athlete-db-config
                   key: DB_PORT
             - name: DB_NAME
               valueFrom:
                 configMapKeyRef:
-                  name: athlete-config
+                  name: athlete-db-config
                   key: DB_NAME
             - name: DB_USER
               valueFrom:
                 configMapKeyRef:
-                  name: athlete-config
+                  name: athlete-db-config
                   key: DB_USER
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: athlete-secret
+                  name: athlete-db-secret
                   key: DB_PASSWORD
           readinessProbe:
             httpGet:
