--- a/apps/athlete-service/base/athlete-db-postgres-config.yaml
+++ b/apps/athlete-service/base/athlete-db-postgres-config.yaml
@@ -1,7 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-config
+  name: athlete-db-postgres-config
+  labels:
+    app.kubernetes.io/name: athlete-db
+    app.kubernetes.io/instance: athlete-service
+    app.kubernetes.io/component: database
+    app.kubernetes.io/part-of: athlefi
+    app.kubernetes.io/managed-by: kustomize
 data:
   postgresql.conf: |
     # Basic settings
