--- a/apps/athlete-service/base/athlete-db-statefulset.yaml
+++ b/apps/athlete-service/base/athlete-db-statefulset.yaml
@@ -26,6 +26,21 @@ spec:
     spec:
       securityContext:
         fsGroup: 999
+      initContainers:
+        - name: init-db-permissions
+          image: busybox:1.35
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+          command:
+            - /bin/sh
+            - -c
+            - |
+              chown -R 999:999 /var/lib/postgresql/data
+              chmod 700 /var/lib/postgresql/data
+          volumeMounts:
+            - name: db-storage
+              mountPath: /var/lib/postgresql/data
       containers:
         - name: postgres
           image: postgres:17
