--- a/environments/dev/apps.yaml
+++ b/environments/dev/apps.yaml
@@ -39,3 +39,24 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: database-tools-dev
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/dedsec-group/athlefi-infra-gitops
+    targetRevision: HEAD
+    path: infrastructure/database-tools/overlays/dev
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: athlefi-dev
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
