Add Krakend Gateway configuration
- Introduced a comprehensive README.md detailing the structure and deployment of the Krakend Gateway API.
- Added Kubernetes configuration files for the Krakend Gateway, including deployment, service, ingress, and Kustomize setup.
- Updated resource labels and selectors to follow standard conventions for better management and identification.
- Removed outdated deployment and service files to streamline the configuration process.

--- a/apps/krakend-gateway/base/krakend-ingress.yaml
+++ b/apps/krakend-gateway/base/krakend-ingress.yaml
@@ -1,7 +1,13 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: krakend-ingress
+  name: krakend-gateway
+  labels:
+    app.kubernetes.io/name: krakend-gateway
+    app.kubernetes.io/instance: krakend-gateway
+    app.kubernetes.io/component: gateway
+    app.kubernetes.io/part-of: athlefi
+    app.kubernetes.io/managed-by: kustomize
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
@@ -14,7 +20,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: krakend
+                name: krakend-gateway
                 port:
                   number: 80
   tls:
