--- a/apps/krakend-gateway/base/kustomization.yaml
+++ b/apps/krakend-gateway/base/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-  - deployment.yaml
-  - service.yaml
-  - ingress.yaml
+  - krakend-deployment.yaml
+  - krakend-service.yaml
+  - krakend-ingress.yaml
