--- a/infrastructure/database-tools/overlays/dev/kustomization.yaml
+++ b/infrastructure/database-tools/overlays/dev/kustomization.yaml
@@ -2,3 +2,15 @@ namespace: athlefi-dev
 
 resources:
   - ../../base
+
+patches:
+  - target:
+      kind: Ingress
+      name: pgadmin
+    patch: |-
+      - op: replace
+        path: /spec/rules/0/host
+        value: pgadmin-dev.athlefi.internal.mx-central-1.sparkfly.cloud
+      - op: replace
+        path: /spec/tls/0/hosts/0
+        value: pgadmin-dev.athlefi.internal.mx-central-1.sparkfly.cloud
