Update pgAdmin configuration and README for email domain changes
- Changed the default email in pgAdmin config from `admin@athlefi.local` to `admin@sparkfly.dev` for valid domain compliance.
- Added a new Ingress configuration file `pgadmin-ingress.yaml` to the README for external access.
- Updated README to reflect the new email domain and included a note on valid email domains for pgAdmin.

--- a/infrastructure/database-tools/base/pgadmin-configmap.yaml
+++ b/infrastructure/database-tools/base/pgadmin-configmap.yaml
@@ -9,4 +9,4 @@ metadata:
     app.kubernetes.io/part-of: athlefi
     app.kubernetes.io/managed-by: kustomize
 data:
-  PGADMIN_DEFAULT_EMAIL: admin@athlefi.local
+  PGADMIN_DEFAULT_EMAIL: admin@sparkfly.dev
