Add pgAdmin configuration options for server mode and password requirements
- Introduced PGADMIN_CONFIG_SERVER_MODE set to "True" to enable server mode.
- Added PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED set to "False" to simplify access management.
- These changes enhance the deployment's flexibility and usability.

--- a/infrastructure/database-tools/base/pgadmin-deployment.yaml
+++ b/infrastructure/database-tools/base/pgadmin-deployment.yaml
@@ -60,6 +60,10 @@ spec:
                 secretKeyRef:
                   name: pgadmin-secret
                   key: PGADMIN_DEFAULT_PASSWORD
+            - name: PGADMIN_CONFIG_SERVER_MODE
+              value: "True"
+            - name: PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED
+              value: "False"
           volumeMounts:
             - name: pgadmin-data
               mountPath: /var/lib/pgadmin
