--- a/infrastructure/database-tools/base/pgadmin-ingress.yaml
+++ b/infrastructure/database-tools/base/pgadmin-ingress.yaml
@@ -15,6 +15,8 @@ metadata:
     traefik.ingress.kubernetes.io/affinity: "true"
     traefik.ingress.kubernetes.io/session.cookie.secure: "true"
     traefik.ingress.kubernetes.io/session.cookie.samesite: "strict"
+    # Automatic certificate management
+    cert-manager.io/cluster-issuer: "athlefi-letsencrypt"
 spec:
   rules:
     - host: pgadmin-dev.athlefi.internal.mx-central-1.sparkfly.cloud
@@ -30,3 +32,4 @@ spec:
   tls:
     - hosts:
         - pgadmin-dev.athlefi.internal.mx-central-1.sparkfly.cloud
+      secretName: pgadmin-dev-tls
