--- a/infrastructure/certificates/base/cluster-issuer.yaml
+++ b/infrastructure/certificates/base/cluster-issuer.yaml
@@ -13,7 +13,7 @@ spec:
     # The ACME server URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: admin@sparkfly.dev
+    email: kevin.olvera@dedsec.com.mx
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: athlefi-letsencrypt
