Update pgAdmin version and add environment variable in deployment configuration
- Updated the pgAdmin version from "8.5" to "9.6" in the deployment YAML to utilize the latest features and improvements.
- Added a new environment variable `PGADMIN_DISABLE_POSTFIX` set to "True" to enhance configuration options for the pgAdmin deployment.

--- a/infrastructure/database-tools/base/pgadmin-deployment.yaml
+++ b/infrastructure/database-tools/base/pgadmin-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: pgadmin
     app.kubernetes.io/instance: database-tools
-    app.kubernetes.io/version: "8.5"
+    app.kubernetes.io/version: "9.6"
     app.kubernetes.io/component: database-admin
     app.kubernetes.io/part-of: athlefi
     app.kubernetes.io/managed-by: kustomize
@@ -20,7 +20,7 @@ spec:
       labels:
         app.kubernetes.io/name: pgadmin
         app.kubernetes.io/instance: database-tools
-        app.kubernetes.io/version: "8.5"
+        app.kubernetes.io/version: "9.6"
         app.kubernetes.io/component: database-admin
         app.kubernetes.io/part-of: athlefi
         app.kubernetes.io/managed-by: kustomize
@@ -60,6 +60,8 @@ spec:
                 secretKeyRef:
                   name: pgadmin-secret
                   key: PGADMIN_DEFAULT_PASSWORD
+            - name: PGADMIN_DISABLE_POSTFIX
+              value: "True"
             - name: PGADMIN_CONFIG_SERVER_MODE
               value: "True"
             - name: PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED
